# mallard-management

./: .env.example  .env.local.example  .gitignore  README.md  launch.bat  package-lock.json  package.json  start-dev.ps1  start-dev.sh
engine/: .gitignore  pyproject.toml
engine/api/: __init__.py  data_routes.py
engine/backtest/: README.md  metrics.py  run.py
engine/broker/: alpaca.py  alpaca_broker.py  base.py  simulator.py
engine/data/: __init__.py  backtest.json  backtest_api.json  classification.csv  db.py  greenlight.db  loaders.py  prices.csv  repository.py  seed.py  universe.csv  universe_seed.py
engine/fixtures/: persona_greenlight.json  persona_halt.json  positions_demo.json
engine/gate/: __init__.py  responsibility.py
engine/montecarlo/: __init__.py  downside.py  projection.py
engine/optimizer/: __init__.py  black_litterman.py  blend.py  cvar.py  erc.py  strategic.py  tilt.py
engine/profiler/: __init__.py  capacity.py  fusion.py  profile.py  tolerance.py  validate.py
engine/rebalance/: __init__.py  rebalancer.py
engine/schemas/: __init__.py  constants.py  models.py
engine/sizing/: __init__.py  sizer.py
engine/tax/: __init__.py  rates.py  report.py  strategies.py
engine/tests/: __init__.py  conftest.py  factories.py  test_alpaca_broker_api.py  test_alternative_optimizers.py  test_backtest.py  test_blend_annualization.py  test_broker_simulator.py  test_data_repository.py  test_data_routes.py  test_fusion.py  test_gate.py  test_hierarchical_erc.py  test_ingest.py  test_montecarlo.py  test_optimizer.py  test_profiler.py  test_ragged_cov.py  (+8 more)
(+219 files in other folders)
